New version of the debian-l10n-french FAQ  [Patrice Karatchentzeff]
CVS version numbers

french/international/french/debian-l10n-french-faq.sgml: 1.3 -> 1.4 
french/international/french/debian-l10n-french-faq.html/ch1.html: 1.2 -> 1.3 
french/international/french/debian-l10n-french-faq.html/ch2.html: 1.2 -> 1.3 
french/international/french/debian-l10n-french-faq.html/ch3.html: 1.2 -> 1.3 
french/international/french/debian-l10n-french-faq.html/ch4.html: 1.2 -> 1.3 
french/international/french/debian-l10n-french-faq.html/ch5.html: 1.2 -> 1.3 
french/international/french/debian-l10n-french-faq.html/footnotes.html: 1.2 -> 1.3 
french/international/french/debian-l10n-french-faq.html/index.html: 1.2 -> 1.3

--- a/french/international/french/debian-l10n-french-faq.html/ch1.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch1.html
@@ -34,18 +34,18 @@ Chapitre 1 La vie de la liste
 
 <p>
 Vous trouverez les sources (au format <code>sgml debian-doc</code>) de cette
-FAQ sur le serveur <code>cvs</code> de Debian:
+FAQ sur le serveur <code>cvs</code> de Debian&nbsp;:
 
 <p>
-<var>/cvs/webwml/french/international/french/debian-l10-french-faq.sgml</var>
+<var>/cvs/webwml/french/intl/french/debian-l10-french-faq.sgml</var>
 
 <p>
 (voir «&nbsp;Comment récupérer un document&nbsp;?&nbsp;») et en ligne sur le
-serveur de Debian à l'adresse:
+serveur de Debian à l'adresse&nbsp;:
 
 <p>
 <code><a
-href="http://www.debian.org/international/french/debian-l10-french-faq.html">http://www.debian.org/international/french/debian-l10-french-faq.html</a></code>
+href="http://www.debian.org/intl/french/debian-l10-french-faq.html">http://www.debian.org/intl/french/debian-l10-french-faq.html</a></code>
 
 <p>
 Pour contribuer, me contacter directement ou poster sur
@@ -55,27 +55,40 @@ Pour contribuer, me contacter directement ou poster sur
 <hr>
 
 <h2>
-<a name="s1.2">1.2 Comment s'abonner ? se désabonner ?</a>
+<a name="s1.2">1.2 Comment lire cette FAQ ?</a>
 </h2>
 
 <p>
-Tout est expliqué dans la page <code><a
-href="http://www.debian.org/international/French.fr.html">http://www.debian.org/international/French.fr.html</a></code>.
+J'ai essayé, suite à différentes remarques, de satisfaire tout le monde.  Du
+coup, chaque point important est divisisé en deux parties&nbsp;: une partie
+destinée à celui qui a besoin de l'information rapidement et sans fioriture et
+une autre plus développée avec explications techniques à la clé.
+</p>
+
+<hr>
+
+<h2>
+<a name="s1.3">1.3 Comment s'abonner ? se désabonner ?</a>
+</h2>
+
+<p>
+Tout est détaillé dans la page <code><a
+href="http://www.debian.org/intl/French.fr.html">http://www.debian.org/intl/French.fr.html</a></code>.
 
 <p>
 Si vous n'avez pas accès à <var>http</var>, il vous suffit d'envoyer un
 courriel à <em>debian-l10n-french-request@lists.debian.org</em> avec DANS LE
-CORPS DU MESSAGE:
+CORPS DU MESSAGE&nbsp;:
 
 <pre>
        subscribe &lt;votre_adresse_électronique&gt;
 </pre>
 
 <p>
-Pour se désabonner, la procédure est envoyée sur chacun des courriels reçu de
+Pour se désabonner, la procédure est envoyée sur chacun des courriels reçus de
 la liste de diffusion.  Il vous suffit d'envoyer un courriel à
 <em>debian-l10n-french-request@lists.debian.org&gt;</em> avec DANS LE CHAMP
-SUJET:
+SUJET&nbsp;:
 
 <pre>
        unsubscribe
@@ -85,17 +98,17 @@ SUJET:
 <hr>
 
 <h2>
-<a name="s1.3">1.3 Comment se règlent les différents ?</a>
+<a name="s1.4">1.4 Comment se règlent les différends ?</a>
 </h2>
 
 <p>
-À coups de poing virtuels, bien sûr :-)
+À coups de poing virtuels, bien sûr &nbsp;:-)
 
 <p>
 En fait, en cas de désaccord sur une traduction (un terme, un sens
 général,...), on fait un vote des gens inscrits.  Un inscrit participant vaut
 une voix.  Tout le reste ne vaut rien.  Personne ne vaut plus qu'un autre.  La
-démocratie, quoi :-).
+démocratie, quoi &nbsp;:-).
 
 <p>
 Bon, le tout est d'arriver à un consensus pour pouvoir continuer.  Ne pas
@@ -108,16 +121,17 @@ uniquement cela.  Pour tout le reste du projet Debian, la liste ici n'a aucun
 pouvoir.
 
 <p>
-Il y a quand même une règle non écrite en cas de litige profond: <em>c'est au
-final toujours celui qui est l'auteur du document qui peut imposer son point de
-vu en vertue du fait que c'est lui qui a fait l'effort de créer le premier
-document</em>.  Bien sûr, il est rare d'en arriver à de telles extrémités...
+Il y a quand même une règle non écrite en cas de litige profond&nbsp;:
+<em>c'est au final toujours celui qui est l'auteur du document qui peut imposer
+son point de vue en vertue du fait que c'est lui qui a fait l'effort de créer
+le premier document</em>.  Bien sûr, il est rare d'en arriver à de telles
+extrémités...
 </p>
 
 <hr>
 
 <h2>
-<a name="s1.4">1.4 Je n'ai plus le temps de (ou je ne veux plus) participer</a>
+<a name="s1.5">1.5 Je n'ai plus le temps de (ou je ne veux plus) participer</a>
 </h2>
 
 <p>
@@ -131,11 +145,13 @@ de façon à faciliter la maintenance des projets de traductions.
 <hr>
 
 <h2>
-<a name="s1.5">1.5 Quelle est la fréquentation du forum ?</a>
+<a name="s1.6">1.6 Quelle est la fréquentation du forum ?</a>
 </h2>
 
 <p>
-Faible.  Quelques messages par semaine, sauf les jours de grands débats :-).
+Faible.  Quelques messages par semaine, sauf les jours de grands débats
+&nbsp;:-).  Cela dit, cela a notablement augmenté ces derniers temps.  La
+rançon du succès&nbsp;?
 
 <p>
 On pourra visualiser l'état de la fréquentation du site directement sur le site
@@ -152,7 +168,7 @@ si tôt que cette page sera fonctionnelle.
 <hr>
 
 <h2>
-<a name="s1.6">1.6 Quels sont les critères pour participer ?</a>
+<a name="s1.7">1.7 Quels sont les critères pour participer ?</a>
 </h2>
 
 <p>
@@ -165,18 +181,18 @@ relectures.  Pas de fausse pudeur...
 
 <p>
 Pour participer, il vous suffit de savoir lire et écrire correctement le
-français.  Pas besoin d'être Molière ni Rabelais: il vous suffit de savoir vous
-servir d'un éditeur de texte.
+français.  Pas besoin d'être Molière ni Rabelais&nbsp;: il vous suffit de
+savoir vous servir d'un éditeur de texte.
 </p>
 
 <hr>
 
 <h2>
-<a name="s1.7">1.7 Qui est le responsable ? (Qui contacter en cas de ...)</a>
+<a name="s1.8">1.8 Qui est le responsable ? (Qui contacter en cas de ...)</a>
 </h2>
 
 <p>
-Il y a maintenant un triumvirat responsable de cette liste:
+Il y a maintenant un triumvirat responsable de cette liste&nbsp;:
 
 <pre>
        
@@ -187,7 +203,7 @@ Il y a maintenant un triumvirat responsable de cette liste:
 
 <p>
 On peut aussi aller directement sur le site Debian pour obtenir cette
-information:
+information&nbsp;:
 
 <p>
 <code><a
@@ -203,12 +219,12 @@ l'amour entre les participants de la liste ;-)
 <hr>
 
 <h2>
-<a name="s1.8">1.8 Où est archivée la liste ?</a>
+<a name="s1.9">1.9 Où est archivée la liste ?</a>
 </h2>
 
 <p>
 <code><a
-href="http://lists.debian.org/index.html#debian-l10n-french">http://lists.debian.org/index.html#debian-l10n-french</a></code>
+href="http://lists.debian.org/i18n.html">http://lists.debian.org/i18n.html</a></code>
 
 <p>
 Puis allez cliquer dans le mois-année qui vous intéresse dans
@@ -218,7 +234,7 @@ Puis allez cliquer dans le mois-année qui vous intéresse dans
 <hr>
 
 <h2>
-<a name="s1.9">1.9 Qui est René Cougnenc ?</a>
+<a name="s1.10">1.10 Qui est René Cougnenc ?</a>
 </h2>
 
 <p>
@@ -246,7 +262,7 @@ Comme ses traductions sont remarquables, nous y faisons souvent références.
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.2<br>
+Version 1.4<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
