--- a/french/international/french/debian-l10n-french-faq.html/ch3.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch3.html
@@ -30,14 +30,14 @@ Chapitre 3 Traduire pour Debian (et pour le logiciel libre en général)
 <hr>
 
 <p>
-Note: Ce chapitre est appelé à être traduit en anglais de façon à devenir le
-<em>HOWTO-l10n</em> de Debian en particulier mais aussi de tous les logiciels
-libres
+Note&nbsp;: Ce chapitre est appelé à être traduit en anglais de façon à devenir
+le <em>HOWTO-l10n</em> de Debian en particulier mais aussi de tous les
+logiciels libres
 
 <p>
-Ce chapitre est l'oeuvre de Martin Quinson: il a été publié originalement dans
-la <em>Foire aux questions</em> de <em>debian-french</em>.  Je le reprend à mon
-compte à présent.
+Ce chapitre est l'oeuvre de Martin Quinson&nbsp;: il a été publié originalement
+dans la <em>Foire aux questions</em> de <em>debian-french</em>.  Je le reprend
+à mon compte à présent.
 </p>
 
 <hr>
@@ -148,7 +148,7 @@ premier temps, on a inventé des fichiers <code>.desktop</code> qui contenaient
 ces informations.
 
 <p>
-Voici un exemple:
+Voici un exemple&nbsp;:
 
 <pre>
      [Desktop Entry]
@@ -199,13 +199,13 @@ On traduit les <code>.po</code>, et la machine se dépatouille.
 </h4>
 
 <p>
-Autre catégorie que l'on peut traduire : les fichiers de <code>templates
+Autre catégorie que l'on peut traduire &nbsp;: les fichiers de <code>templates
 debconf</code>.  Il s'agit des textes de questions qu'on va voir quand on
 configure un paquet.  C'est une <em>debianerie</em> (<em>i-e.</em>, hors de
 debian, ça n'existe pas [encore]).
 
 <p>
-Voici un exemple (traduit) :
+Voici un exemple (traduit) &nbsp;:
 
 <pre>
      Template: debconf/showold
@@ -244,8 +244,8 @@ Encore une fois, cela se passe d'explication.
 <p>
 Il existe toute une mécanique pour gérer les traductions, ce qui permet de
 vérifier que les traductions sont à jour.  C'est dans le paquet
-<code>debconf-utils</code>: ce sont les programmes <code>debconf-getconf</code>
-et <code>debconf-mergetemplates</code>.
+<code>debconf-utils</code>&nbsp;: ce sont les programmes
+<code>debconf-getconf</code> et <code>debconf-mergetemplates</code>.
 
 <p>
 Mais bon.  Je commence à me dire qu'il serait pas mal de faire des fichiers de
@@ -284,7 +284,7 @@ href="http://www.debian.org/devel/website/">http://www.debian.org/devel/website/
 <p>
 Comme Debian utilise un méta-système de menu, on devrait arriver à les
 traduire.  Il y a même un pseudo mécanisme de traduction dans le paquet menu.
-Et dans le fichier <em>doc/translate</em>, on peut lire:
+Et dans le fichier <em>doc/translate</em>, on peut lire&nbsp;:
 
 <p>
 <em>What I propose is that update-menus simply learns the dutch, german,
@@ -413,7 +413,7 @@ pourra reprendre de plus belle.  ;)
 <hr>
 
 <h2>
-<a name="s3.2">3.2 Comment aider : la partie administrative</a>
+<a name="s3.2">3.2 Comment aider &nbsp;: la partie administrative</a>
 </h2>
 
 <p>
@@ -422,27 +422,27 @@ des traductions, qui est évidemment primordiale), est de se
 <em>coordonner</em>.
 
 <p>
-Ce besoin de coordination doit se manifester:
+Ce besoin de coordination doit se manifester&nbsp;:
 
 <ul>
 
 <p>
 <li>
-<em>Entre les traducteurs</em> : pour ne pas faire le travail deux fois, et que
-les traductions restent à jour.  Il y a pire qu'une page de manuel non
-traduite: une page traduite non à jour, puisque l'utilisateur n'a aucun moyen
-simple de s'en rendre compte.
+<em>Entre les traducteurs</em> &nbsp;: pour ne pas faire le travail deux fois,
+et que les traductions restent à jour.  Il y a pire qu'une page de manuel non
+traduite&nbsp;: une page traduite non à jour, puisque l'utilisateur n'a aucun
+moyen simple de s'en rendre compte.
 </li>
 
 <p>
 <li>
-<em>Entre traducteurs et mainteneurs</em> : pour que les choses traduites
+<em>Entre traducteurs et mainteneurs</em> &nbsp;: pour que les choses traduites
 soient incluses dans les paquets, et que les traductions restent à jour.
 </li>
 
 <p>
 <li>
-<em>Entre Debian et le reste du monde</em> : la très grande majorité des
+<em>Entre Debian et le reste du monde</em> &nbsp;: la très grande majorité des
 programmes distribués par Debian ne sont pas développés au sein du projet.  Et
 quelques projets extérieurs ont mis en place des sous projets de traductions.
 Il s'agit donc de ne pas marcher sur les plates-bandes de ces gens et, encore
@@ -453,7 +453,7 @@ réputation de Debian auprès des développeurs).
 </ul>
 
 <p>
-Pour résoudre ces problèmes, je propose les procédures suivantes:
+Pour résoudre ces problèmes, je propose les procédures suivantes&nbsp;:
 </p>
 
 <hr>
@@ -545,14 +545,14 @@ n'est pas le cas, ou si le mainteneur a mis vos fichiers au mauvais endroit.
 
 <p>
 Ça, c'est la partie la plus difficile.  Je n'ai pas de réponse magique.  Je
-considère qu'il y a plusieurs catégories de paquets:
+considère qu'il y a plusieurs catégories de paquets&nbsp;:
 
 <ul>
 
 <p>
 <li>
 <em>Les paquets purement Debian</em> comme <code>dpkg</code> ou
-<code>bogue</code>.  Dans ce cas, le problème ne se pose pas.
+<code>bug</code>.  Dans ce cas, le problème ne se pose pas.
 </li>
 
 <p>
@@ -561,7 +561,7 @@ considère qu'il y a plusieurs catégories de paquets:
 comme les programmes GNOME ou KDE.  Dans ce cas, je pense que le plus simple
 est de rejoindre le projet de traduction associé.  Voici la liste des plus gros
 projets de traductions (<em>i-e.</em>, ceux que je connais) vers lesquels il
-faut vous tourner:
+faut vous tourner&nbsp;:
 
 <ul>
 
@@ -676,9 +676,9 @@ un petit effort...
 Vouloir traduire, c'est tres bien; savoir ce qu'on va traduire, c'est mieux.
 
 <p>
-Il faut choisir la catégorie de matériel que l'on veut traduire: catalogues
-<code>po</code>, <code>templates debconf</code>, pages de manuel, document
-info, manuel de l'utilisateur en html ou assimilé, ou autre.
+Il faut choisir la catégorie de matériel que l'on veut traduire&nbsp;:
+catalogues <code>po</code>, <code>templates debconf</code>, pages de manuel,
+document info, manuel de l'utilisateur en html ou assimilé, ou autre.
 
 <p>
 Pour choisir sur quel paquet travailler, la méthode dépend du matériel.  Pour
@@ -723,13 +723,13 @@ Commençons par quelques pointeurs vers plus de documentation.
 
 <p>
 <li>
-Le manuel de <code>gettext</code>: inclus dans le paquet
+Le manuel de <code>gettext</code>&nbsp;: inclus dans le paquet
 <code>gettext-doc</code>.
 </li>
 
 <p>
 <li>
-Le <em>KDE Translation HOWTO</em>: <code><a
+Le <em>KDE Translation HOWTO</em>&nbsp;: <code><a
 href="http://i18n.kde.org/translation-howto/index.html">http://i18n.kde.org/translation-howto/index.html</a></code>
 </li>
 
@@ -747,7 +747,7 @@ apparaître dans les commentaires, du genre
 .
 
 <p>
-C'est une indication pour vous guider dans le travail de traduction:
+C'est une indication pour vous guider dans le travail de traduction&nbsp;:
 
 <ul>
 
@@ -793,7 +793,7 @@ normalement.
 
 <p>
 Voyons ensuite les principaux programmes disponibles pour vous aider dans votre
-tâche:
+tâche&nbsp;:
 
 <ul>
 
@@ -804,7 +804,7 @@ j'utilise, et c'est la solution que je conseille à tout le monde (évidemment,
 puisque c'est mon choix).
 
 <p>
-Ses qualités:
+Ses qualités&nbsp;:
 
 <ul>
 
@@ -839,7 +839,7 @@ mode <code>flyspell-mode</code> pour le faire.
 
 <p>
 <li>
-pas de <em>pendium</em> (voir la documentation de <code>gettext</code> pour
+pas de <em>compendium</em> (voir la documentation de <code>gettext</code> pour
 savoir ce qu'est un <em>compendium</em>
 
 <p>
@@ -855,7 +855,7 @@ savoir ce qu'est un <em>compendium</em>
 mais...&nbsp; je n'aime pas son ergonomie (c'est personnel, évidemment)
 
 <p>
-Ses qualités:
+Ses qualités&nbsp;:
 
 <ul>
 
@@ -872,7 +872,7 @@ Correction orthographique.
 </ul>
 
 <p>
-Ses défauts:
+Ses défauts&nbsp;:
 
 <ul>
 
@@ -914,13 +914,13 @@ lui offrir l'opportunité de vous substituer à lui.  Ajoutez alors votre adresse
 
 <p>
 Voici quelques instructions issues du fichier <em>README.translators</em> du
-paquet <code>debconf</code>:
+paquet <code>debconf</code>&nbsp;:
 
 <p>
 Le fichier que vous devez traduire est le <code>template</code> Debian, en
 engendrant un fichier <code>template</code> &lt;lang&gt;.  Ceci est spécifique
 à <code>debconf</code>.  Pour fabriquer facilement un fichier de référence d'un
-<code>template</code> &lt;lang&gt; vous n'avez qu'à taper:
+<code>template</code> &lt;lang&gt; vous n'avez qu'à taper&nbsp;:
 
 <pre>
      debconf-getlang &lt;lang&gt; debian/templates &gt; debian/templates.&lt;lang&gt;
@@ -930,17 +930,17 @@ engendrant un fichier <code>template</code> &lt;lang&gt;.  Ceci est spécifique
 Ensuite, éditez le nouveau fichier, et remplissez par des traductions toutes
 les lignes vides.  Lorsque je change le fichier <code>template</code> de
 référence, vous pouvez rassembler le tout avec la commande
-<code>debconf-mergetemplate</code>:
+<code>debconf-mergetemplate</code>&nbsp;:
 
 <pre>
      debconf-mergetemplate debian/templates debian/templates.&lt;lang&gt; &gt; new
 </pre>
 
 <p>
-Un dernier mot au sujet de la syntaxe des <code>templates</code>: la première
-ligne de description est comme une en-tête.  Vous n'êtes pas autorisé à
-poursuivre la première ligne sur les suivantes.  Par exemple, le
-<code>template</code> suivant est mauvais:
+Un dernier mot au sujet de la syntaxe des <code>templates</code>&nbsp;: la
+première ligne de description est comme une en-tête.  Vous n'êtes pas autorisé
+à poursuivre la première ligne sur les suivantes.  Par exemple, le
+<code>template</code> suivant est mauvais&nbsp;:
 
 <pre>
      Template: autolog/note
@@ -963,7 +963,312 @@ Les spécifications imposent une limite de « 50 caractères au plus ».
 <hr>
 
 <h3>
-<a name="s3.3.5">3.3.5 Comment traduire les pages de manuel ?</a>
+<a name="s3.3.5">3.3.5 Comment traduire les descriptions de paquets Debian ?</a>
+</h3>
+
+<p>
+Les descriptions de paquets Debian sont les parties de texte explicatives
+concernant le-dit paquet.  Les descriptions à traduire sont souvent très
+courtes, quelques lignes à peine, mais les traduire toutes est une tâche de
+longue haleine (prédiction&nbsp;: juillet 2003...&nbsp; date non contractuelle
+bien sûr).
+
+<p>
+Plus que des traducteurs, il nous faut des relecteurs !
+</p>
+
+<hr>
+
+<h4>
+<a name="s3.3.5.1">3.3.5.1 Organisation</a>
+</h4>
+
+<p>
+Le projet a été initié par <code><a
+href="mailto:grisu@debian.org">mailto:grisu@debian.org</a></code>Michael
+Bramer, qui en assure la maintenance.  L'adresse électronique du serveur est
+<code><a
+href="mailto:grisu-td@auric.debian.org">mailto:grisu-td@auric.debian.org</a></code>
+et la page d'accueil est <code><a
+href="http://auric.debian.org/~grisu/ddts">http://auric.debian.org/~grisu/ddts</a></code>.
+Comme on peut le constater, ce projet n'a pas encore de statut très clair au
+sein de Debian, ne disposant ni d'un espace web ni d'une liste de diffusion
+dédiés.  De plus, son intégration en tant que tel pose aussi pas mal de soucis.
+Mais c'est un autre débat (suivre debian-devel pour les tenants et
+aboutissants).
+</p>
+
+<hr>
+
+<h4>
+<a name="s3.3.5.2">3.3.5.2 Demander des traductions par courrier électronique</a>
+</h4>
+
+<p>
+Il vous suffit d'envoyer un courriel banal à
+<em>grisu-td@auric.debian.org</em>, en mettant dans le sujet du courriel votre
+commande, (comme par exemple <em>GET 1 fr</em>, laissez le corps du courriel
+vide).  Attendez quelques instants, puis vérifiez votre boîte à lettres
+électroniques.  Voila, ce n'est pas plus compliqué que cela&nbsp;!
+
+<p>
+Les commandes disponibles sont les suivantes&nbsp;:
+
+<ul>
+
+<p>
+<li>
+GET x fr
+
+<p>
+demande «&nbsp;x&nbsp;» descriptions non encore traduites (nombre compris entre
+1 et 9).
+</li>
+
+<p>
+<li>
+REQUEST &lt;nom du paquet&gt; fr
+
+<p>
+demande la description du paquet &lt;nom du paquet&gt;.
+</li>
+
+<p>
+<li>
+SREQUEST &lt;nom du paquet&gt; fr
+
+<p>
+demande toutes les descriptions du paquet source qui porte le nom &lt;nom du
+paquet&gt;.
+</li>
+
+<p>
+<li>
+STATUS fr
+
+<p>
+demande un rapport sur l'état des traductions pour la langue française.
+</li>
+
+<p>
+<li>
+NOGUIDE
+
+<p>
+n'affiche pas ce guide dans la réponse du serveur.
+</li>
+
+<p>
+<li>
+NOTHING
+
+<p>
+n'envoie pas de nouvelles descriptions, l'état des traductions, <em>etc.</em>
+</li>
+
+</ul>
+</p>
+
+<hr>
+
+<h4>
+<a name="s3.3.5.3">3.3.5.3 Traductions</a>
+</h4>
+
+<p>
+Aprés avoir envoyé votre courriel, vous recevez un formulaire du serveur (Il
+s'agit d'une pièce jointe).  Sauvez la pièce jointe et ouvrez-la avec votre
+éditeur de texte favori.  Dans ce formulaire, vous découvrirez la description
+originale, en anglais donc, (ne la modifiez surtout pas, même si elle contient
+des fautes) et le squelette de la traduction que vous allez faire.
+
+<p>
+Parfois deux descriptions différentes contiennent une phrase ou paragraphe
+identique, si le serveur a déjà réçu une traduction française d'un segment de
+texte identique (dans l'exemple qui suit&nbsp;: «&nbsp;GNOME
+signifie...&nbsp;»), il vous propose une traduction française pour vous alléger
+le travail.  Il ne s'agit que d'une simple suggestion&nbsp;; vous pouvez sans
+problème l'effacer ou la modifier.
+
+<p>
+Voici un exemple de formulaire&nbsp;:
+
+<pre>
+      Description: A tetris clone.
+       Gnome is the &quot;GNU Network Object Model Environment&quot;
+       .
+       It is a project to build a complete, user-friendly desktop
+       based entirely on free software.
+      Description-fr: &lt;trans&gt;
+       Gnome signifie «GNU Network Object Model Environment»
+       .
+       &lt;trans&gt;
+</pre>
+
+<p>
+Dans le squelette du formulaire&nbsp;:
+
+<ul>
+
+<p>
+<li>
+Les lignes débutant par «&nbsp;#&nbsp;» sont des commentaires.
+</li>
+
+<p>
+<li>
+Les lignes commençant par «&nbsp;From: Nom &lt;email@host.com&gt;&nbsp;»
+indique l'adresse électronique du traducteur l'adresse éléctronique du
+traducteur.  (Cette ligne est utile si le traducteur envoie son courrier à
+partir d'une autre adresse électronique).
+</li>
+
+<p>
+<li>
+Les descriptions doivent être séparées par une <em>et une seule</em> ligne
+vide.
+</li>
+
+</ul>
+
+<p>
+Vous n'avez qu'à remplacer le «&nbsp;&lt;trans&gt;&nbsp;» par votre traduction,
+puis, sauvez votre traduction et envoyez-la en pièce jointe à
+<em>grisu-td@auric.debian.org</em>.  Le contenu du sujet du courriel n'a pas
+d'importance.
+
+<p>
+<em>Règles à respecter</em>
+
+<ul>
+
+<p>
+<li>
+ne traduisez pas le mot <em>description</em>,
+</li>
+
+<p>
+<li>
+gardez la structure de la description,
+</li>
+
+<p>
+<li>
+ne modifiez pas la description anglaise&nbsp;: si vous trouvez une erreur,
+envoyez un rapport de bogue.
+</li>
+
+<p>
+<li>
+Ne modifiez rien d'autre que le français.  N'insérez pas de lignes
+supplémentaires notamment&nbsp;!
+</li>
+
+<p>
+<li>
+Traduire conformément aux règles en vigueur dans la traduction chez Debian.
+</li>
+
+</ul>
+</p>
+
+<hr>
+
+<h4>
+<a name="s3.3.5.4">3.3.5.4 relecture</a>
+</h4>
+
+<p>
+Les traductions sont désormais envoyées chaque jour sur la liste <code><a
+href="http://lists.debian.org/debian-l10n-french">http://lists.debian.org/debian-l10n-french</a></code>
+afin d'y être relues.  Votre adresse électronique sera jointe à la description.
+
+<p>
+Il se peut qu'un membre de la liste vous écrive directement pour vous proposer
+des améliorations ou des corrections.  Dans tous les cas, suivez la liste pour
+y relever les diverses corrections.
+
+<p>
+Il existe un script à <code><a
+href="http://perso.wanadoo.fr/nico.bertol/ddts/ddts-rev">http://perso.wanadoo.fr/nico.bertol/ddts/ddts-rev</a></code>
+en perl pour faciliter le travail.  Il vous faut tout d'abord paramétrer votre
+configuration dans le fichier <em>~/.ddts-rev</em>, un fichier d'exemple est
+fourni à <code><a
+href="http://perso.wanadoo.fr/nico.bertol/ddts/dot.ddts-rev">http://perso.wanadoo.fr/nico.bertol/ddts/dot.ddts-rev</a></code>,
+il vous suffit de renseigner les variables avec les valeurs qui vous
+conviennent, des commentaires expliquent leur signification.
+
+<p>
+Ensuite, voici la démarche à suivre&nbsp;:
+
+<ul>
+
+<p>
+<li>
+passer à l'entrée standard du script le rapport reçu avec l'option
+<em>parse</em>,
+</li>
+
+<p>
+<li>
+renommer les fichiers <em>NomDuPaquet.todo</em> en <em>NomDuPaquet.relu</em>
+</li>
+
+<p>
+<li>
+éditer <em>NomDuPaquet.relu</em> et effectuer les corrections nécessaires, vous
+pouvez ajouter des commentaires en ajoutant des lignes commençant par «
+&gt;&gt; » suivit d'une espace puis le texte de commentaire,
+</li>
+
+<p>
+<li>
+lancer le script avec l'option <em>mail</em> pour fabriquer les courriels
+automatiquement.
+</li>
+
+</ul>
+
+<p>
+Pour plus d'information, lisez la documentation fournie avec le script :
+<samp>perldoc ddts-rev</samp>.
+
+<p>
+Des fichiers d'exemple sont aussi fournis : un fichier <code><a
+href="http://perso.wanadoo.fr/nico.bertol/ddts/test">http://perso.wanadoo.fr/nico.bertol/ddts/test</a></code>à
+relire, un fichier <code><a
+href="http://perso.wanadoo.fr/nico.bertol/ddts/test.relu">http://perso.wanadoo.fr/nico.bertol/ddts/test.relu</a></code>relu,
+et l'adresse <code><a
+href="http://perso.wanadoo.fr/nico.bertol/ddts/test.sent">http://perso.wanadoo.fr/nico.bertol/ddts/test.sent</a></code>pour
+le courriel fabriqué.
+</p>
+
+<hr>
+
+<h4>
+<a name="s3.3.5.5">3.3.5.5 Profiter vous-même des traductions</a>
+</h4>
+
+<p>
+Insérez simplement l'une des lignes suivantes dans le fichier
+<em>/etc/apt/sources.lists</em>&nbsp;:
+
+<pre>
+      deb http://gluck.debian.org/~grisu/ddts/aptable fr/potato main deb
+      http://gluck.debian.org/~grisu/ddts/aptable fr/woody main deb
+      http://gluck.debian.org/~grisu/ddts/aptable fr/sid main
+</pre>
+
+<p>
+Après un «&nbsp;apt-get update&nbsp;», tous les outils (<code>dselect</code>,
+<code>gnome-apt</code>, <code>deity</code>,...) utiliseront les descriptions
+déjà traduites.
+</p>
+
+<hr>
+
+<h3>
+<a name="s3.3.6">3.3.6 Comment traduire les pages de manuel ?</a>
 </h3>
 
 <p>
@@ -975,7 +1280,7 @@ page reste à jour.  Et je n'ai aucune idée de comment faire...
 <hr>
 
 <h3>
-<a name="s3.3.6">3.3.6 Comment traduire les fichiers info ?</a>
+<a name="s3.3.7">3.3.7 Comment traduire les fichiers info ?</a>
 </h3>
 
 <p>
@@ -985,7 +1290,7 @@ Aucune idée.  <em>Input welcome</em>...
 <hr>
 
 <h3>
-<a name="s3.3.7">3.3.7 Comment traduire la documentation ?</a>
+<a name="s3.3.8">3.3.8 Comment traduire la documentation ?</a>
 </h3>
 
 <p>
@@ -1023,7 +1328,7 @@ l'internationalisation effective de Debian...
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.2<br>
+Version 1.4<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
