--- a/french/international/french/debian-l10n-french-faq.html/ch4.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch4.html
@@ -68,8 +68,8 @@ Si vous désirez une sortie plus complète, tournez-vous vers le format
 
 <p>
 Si vous désirez faire changer les choses, n'hésitez surtout pas à vous
-retrousser les manches et corriger les choses vous même: la communauté entière
-vous remerciera...
+retrousser les manches et corriger les choses vous même&nbsp;: la communauté
+entière vous remerciera...
 </p>
 
 <hr>
@@ -90,7 +90,7 @@ les documents qui ont été traduits et qui y font référence.  C'est une tache
 
 <p>
 Évitez aussi de lancer des polémiques sur le sujet et gardez vos forces pour la
-traduction: Debian seule sera perdante sinon...
+traduction&nbsp;: Debian seule sera perdante sinon...
 </p>
 
 <hr>
@@ -106,7 +106,7 @@ traduction: Debian seule sera perdante sinon...
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.2<br>
+Version 1.4<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
