--- a/french/international/french/debian-l10n-french-faq.html/footnotes.html
+++ b/french/international/french/debian-l10n-french-faq.html/footnotes.html
@@ -27,7 +27,7 @@
 <h2><a href="ch2.html#fr1" name="1">1</a></h2>
 <p>
 Vous n'êtes bien sûr pas obligé d'en comprendre les mécanismes internes pour
-pour vous en servir: l'explication est ici juste dans un but pédagogique.
+vous en servir&nbsp;: l'explication est ici juste dans un but pédagogique.
 
 </p>
 
@@ -42,7 +42,7 @@ pour vous en servir: l'explication est ici juste dans un but pédagogique.
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.2<br>
+Version 1.4<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
