--- a/french/international/french/debian-l10n-french-faq.html/index.html
+++ b/french/international/french/debian-l10n-french-faq.html/index.html
@@ -40,8 +40,23 @@ poser une question dont la réponse se trouve ci après.
 Copyright &copy; 2001 Patrice Karatchentzeff
 
 <p>
-Contributeur: Martin Quinson (auteur original de partie « Traduire pour Debian
-(et pour le logiciel libre) »
+Contributeur&nbsp;:
+
+<ul>
+
+<p>
+<li>
+Martin Quinson (auteur original de la partie «&nbsp;Traduire pour Debian (et
+pour le logiciel libre)&nbsp;»
+</li>
+
+<p>
+<li>
+Youssef ?  (auteur original de la partie «&nbsp;Comment traduire les
+descriptions de paquets Debian&nbsp;»)
+</li>
+
+</ul>
 
 <p>
 Ce manuel est distribué dans l'espoir qu'il vous sera utile mais <em>sans
@@ -63,14 +78,15 @@ href="http://www.gnu.org/copyleft/gpl.html">http://www.gnu.org/copyleft/gpl.html
 <li><a href="ch1.html">1 La vie de la liste</a>
 <ul>
 <li><a href="ch1.html#s1.1">1.1</a> Où trouver cette FAQ ?
-<li><a href="ch1.html#s1.2">1.2</a> Comment s'abonner ? se désabonner ?
-<li><a href="ch1.html#s1.3">1.3</a> Comment se règlent les différents ?
-<li><a href="ch1.html#s1.4">1.4</a> Je n'ai plus le temps de (ou je ne veux plus) participer
-<li><a href="ch1.html#s1.5">1.5</a> Quelle est la fréquentation du forum ?
-<li><a href="ch1.html#s1.6">1.6</a> Quels sont les critères pour participer ?
-<li><a href="ch1.html#s1.7">1.7</a> Qui est le responsable ? (Qui contacter en cas de ...)
-<li><a href="ch1.html#s1.8">1.8</a> Où est archivée la liste ?
-<li><a href="ch1.html#s1.9">1.9</a> Qui est René Cougnenc ?
+<li><a href="ch1.html#s1.2">1.2</a> Comment lire cette FAQ ?
+<li><a href="ch1.html#s1.3">1.3</a> Comment s'abonner ? se désabonner ?
+<li><a href="ch1.html#s1.4">1.4</a> Comment se règlent les différends ?
+<li><a href="ch1.html#s1.5">1.5</a> Je n'ai plus le temps de (ou je ne veux plus) participer
+<li><a href="ch1.html#s1.6">1.6</a> Quelle est la fréquentation du forum ?
+<li><a href="ch1.html#s1.7">1.7</a> Quels sont les critères pour participer ?
+<li><a href="ch1.html#s1.8">1.8</a> Qui est le responsable ? (Qui contacter en cas de ...)
+<li><a href="ch1.html#s1.9">1.9</a> Où est archivée la liste ?
+<li><a href="ch1.html#s1.10">1.10</a> Qui est René Cougnenc ?
 </ul>
 <li><a href="ch2.html">2 Techniques</a>
 <ul>
@@ -92,12 +108,12 @@ href="http://www.gnu.org/copyleft/gpl.html">http://www.gnu.org/copyleft/gpl.html
 <li><a href="ch2.html#s2.16">2.16</a> Comment poster une relecture ?
 <li><a href="ch2.html#s2.17">2.17</a> Comment demander de l'aide ?
 <li><a href="ch2.html#s2.18">2.18</a> Que devient un document traduit ?
-<li><a href="ch2.html#s2.19">2.19</a> Qu'est-ce qui fait référence en matière de traduction pour Debian ?
+<li><a href="ch2.html#s2.19">2.19</a> Qu'est-ce qui fait référence en matière de traduction pour Debian&nbsp;?
 </ul>
 <li><a href="ch3.html">3 Traduire pour Debian (et pour le logiciel libre en général)</a>
 <ul>
 <li><a href="ch3.html#s3.1">3.1</a> Introduction
-<li><a href="ch3.html#s3.2">3.2</a> Comment aider : la partie administrative
+<li><a href="ch3.html#s3.2">3.2</a> Comment aider &nbsp;: la partie administrative
 <li><a href="ch3.html#s3.3">3.3</a> Comment traduire
 <li><a href="ch3.html#s3.4">3.4</a> Conclusion, avenir
 </ul>
@@ -109,10 +125,7 @@ href="http://www.gnu.org/copyleft/gpl.html">http://www.gnu.org/copyleft/gpl.html
 </ul>
 <li><a href="ch5.html">5 Règles typographiques de base</a>
 <ul>
-<li><a href="ch5.html#s5.1">5.1</a> Debian GNU/Linux <em>versus</em> Debian GNU-Linux
-<li><a href="ch5.html#s5.2">5.2</a> Les titres
-<li><a href="ch5.html#s5.3">5.3</a> Les guillemets français
-<li><a href="ch5.html#s5.4">5.4</a> Les espaces fines insécables
+<li><a href="ch5.html#s5.1">5.1</a> Règles typographique de la langue française
 </ul>
 </ul>
 </p>
@@ -128,7 +141,7 @@ href="http://www.gnu.org/copyleft/gpl.html">http://www.gnu.org/copyleft/gpl.html
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.2<br>
+Version 1.4<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
